<resources>
    <string name="app_name">Demo</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">用户中心</string>
    <string name="title_notifications">活动</string>

    <string name="tips_welcome">欢迎登陆</string>
    <string name="prompt_username">用户名:</string>
    <string name="prompt_password">密码:</string>
    <string name="login_name">登陆</string>

    <string name="fragment_home_news_title">最新动态</string>
    <string name="fragment_home_news_item1">年度回顾</string>
    <string name="fragment_home_news_times1">2022/02/20</string>
    <string name="fragment_home_news_content1">test123123124123.</string>
    <string name="fragment_home_news_item2">系统更新公告</string>
    <string name="fragment_home_news_times2">2022/02/16</string>
    <string name="fragment_home_news_item3">设备更新公告</string>
    <string name="fragment_home_news_times3">2022/01/16</string>
    <string name="fragment_home_news_item4">功能更新公告</string>
    <string name="fragment_home_news_times4">2022/01/10</string>
    <string name="fragment_home_news_item5">最新活动公告</string>
    <string name="fragment_home_news_times5">2022/01/03</string>

    <string name="fragment_dashboard_title">个人资料</string>
    <string name="fragment_dashboard_name">昵称:</string>
    <string name="fragment_dashboard_name_value">test</string>
    <string name="fragment_dashboard_phone">手机号:</string>
    <string name="fragment_dashboard_phone_value">17121568934</string>
    <string name="fragment_dashboard_email">邮箱:</string>
    <string name="fragment_dashboard_email_edit">修改</string>
    <string name="fragment_dashboard_email_value">352648523@qq.com</string>
    <string name="fragment_dashboard_qq">QQ:</string>
    <string name="fragment_dashboard_qq_value">374165234</string>
    <string name="fragment_dashboard_wx">微信:</string>
    <string name="fragment_dashboard_wx_value">test5555</string>
    <string name="fragment_dashboard_submit">提交反馈</string>
    <string name="fragment_dashboard_contact">联系客服</string>
    <string name="fragment_dashboard_website">前往官网</string>

    <string name="fragment_dashboard_email_edit_dialog_title">修改邮箱</string>
    <string name="fragment_dashboard_email_edit_dialog_info">新的邮箱地址:</string>

    <string name="fragment_notification_pre">上一张</string>
    <string name="fragment_notification_next">下一张</string>
</resources>