<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppWidget.Tips.Title"
        android:layout_margin="@dimen/activity_common_item_margin"
        android:text="@string/fragment_dashboard_title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_common_divider_margin"
        android:layout_marginEnd="@dimen/activity_common_divider_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:background="@drawable/horizontal_divider" />

    <LinearLayout
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_name_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_phone" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_phone_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_email" />

        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppWidget.Info"
                android:text="@string/fragment_dashboard_email_value" />

            <TextView
                android:id="@+id/edit_email"
                style="@style/AppWidget.Info"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_dashboard_email_edit"
                android:layout_marginLeft="@dimen/activity_common_item_margin" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_qq" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_qq_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_wx" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/AppWidget.Info"
            android:text="@string/fragment_dashboard_wx_value" />
    </LinearLayout>

    <TextView
        android:id="@+id/submit"
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/fragment_dashboard_submit"/>

    <TextView
        android:id="@+id/contact"
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/fragment_dashboard_contact"/>

    <TextView
        android:id="@+id/website"
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_marginBottom="@dimen/activity_common_item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/fragment_dashboard_website"/>
</LinearLayout>