<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips_welcome"
        android:gravity="center"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_margin="@dimen/activity_common_item_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/text_min_with"
            android:text="@string/prompt_username"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_common_item_margin"
            android:layout_marginEnd="@dimen/activity_common_item_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_common_item_margin"
        android:layout_marginEnd="@dimen/activity_common_item_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/text_min_with"
            android:text="@string/prompt_password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_common_item_margin"
            android:layout_marginEnd="@dimen/activity_common_item_margin"/>
    </LinearLayout>

    <Button
            android:id="@+id/login"
            android:text="@string/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"/>
</LinearLayout>